--- a/src/styles/fonts/RobotoMono.css
+++ b/src/styles/fonts/RobotoMono.css
@@ -16,15 +16,9 @@
     src: url('./RobotoMono/roboto-mono-v22-latin-100italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
          url('./RobotoMono/roboto-mono-v22-latin-100italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
   }
-  /* roboto-mono-200 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Roboto Mono';
-    font-style: normal;
-    font-weight: 200;
-    src: url('./RobotoMono/roboto-mono-v22-latin-200.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-         url('./RobotoMono/roboto-mono-v22-latin-200.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-  }
+
+  /* roboto-mono-200 - latin ***PRELOADED*** */
+  
   /* roboto-mono-200italic - latin */
   @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -70,15 +64,9 @@
     src: url('./RobotoMono/roboto-mono-v22-latin-italic.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
          url('./RobotoMono/roboto-mono-v22-latin-italic.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
   }
-  /* roboto-mono-500 - latin */
-  @font-face {
-    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-    font-family: 'Roboto Mono';
-    font-style: normal;
-    font-weight: 500;
-    src: url('./RobotoMono/roboto-mono-v22-latin-500.woff2') format('woff2'), /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
-         url('./RobotoMono/roboto-mono-v22-latin-500.ttf') format('truetype'); /* Chrome 4+, Firefox 3.5+, IE 9+, Safari 3.1+, iOS 4.2+, Android Browser 2.2+ */
-  }
+  
+  /* roboto-mono-500 - latin ***PRELOADED*** */
+  
   /* roboto-mono-500italic - latin */
   @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
